Tue Mar  7 23:28:47 EST 2006

	Add joe_debug command.  Fix pointer leak (caused paragraph reformat
	to be very slow).

Sun Mar  5 12:46:27 EST 2006

	Fix range of %p

	Allow setting of foreground and background colors.

	Fix search problems with ^ $
	Backward search now moves cursor beginning of insertion point.
	Still need to fix bugs with undo in search.

Sat Mar  4 21:59:22 EST 2006

	Highlight python docstrings the same as regular strings.

	Fix bug with -assume_256color: missing ; in escape sequence

	Fix .php variable highlighting

	File selection menu is now above prompt instead of below it.  This
	needs to be an option.

	Added new "-menu_above" option.

	Fix pgup/pgdn to work with menu_above.

Wed Mar  1 10:19:49 EST 2006

	Match how Thomas Dickey implemented the xterm-paste patch.
	Xterm has a bug: if selection is not owned by xterm, the string
	is messed up.

Tue Feb 28 18:50:32 EST 2006

	Fix bug where 'complete' command core dumps.
	Fix bug where '.' alone with c highlighting enabled core dumps.
	Don't run editor if joerc file is bad.
	Improve lock messages.

Mon Feb 27 01:34:37 EST 2006

	Fix perl highlighter bug.  $q not handled properly.
	Show properly escaped previous search string

Thu Feb 23 13:41:20 EST 2006

	Fix bugs with quoted entry.  Now we ignore terminal's encoding on
quoted entry.


Sun Feb 19 22:34:20 EST 2006

	Fix some bugs on itanium: call to joe_malloc was return a (int) and
then got converted to a pointer.  Likewise with things in termcap.c which
needed term.h and curses.h.

	Improved speed of highlighting.

Tue Dec 27 16:56:44 EST 2005

	Allow entry of replacement blank replacement strings when search
	prompting is enabled (basically eliminate automatic replace-string
	prompting).

	"bufed" now works like other file name commands (it prompts for a
	buffer name, and allows completion).

	H-scroll jumps left ~ 10 cols (this needs more work: it should be an
	option).

Tue May 17 18:20:02 EDT 2005

	Release JOE 3.3
