@@ -95,7 +95,7 @@
 		looks like an ANSI terminal (support bold and capability starts with
 		ESC [).
 
- -assume_256color
+-assume_256color
 		Assume terminal has xterm 256 color support (ESC [ 38 ; 5 ; NNN m and
                 ESC [ 48 ; 5 ; NNN m).
 
@@ -1100,7 +1100,7 @@ aspellword	^[ $
 ctrl		^Q		Quote Ctrl chars
        ctrl		`		Quote Ctrl chars
 
-paste			^[ ] 5 2 ; ;		Bracketed paste
+paste			^[ ] 5 2 ;		Bracketed paste
 
 insc			^[ [ 2 ~
 insc			^[ [ L			SCO
