@@ -121,7 +121,7 @@
 		looks like an ANSI terminal (support bold and capability starts with
 		ESC [).
 
- -assume_256color
+-assume_256color
 		Assume terminal has xterm 256 color support (ESC [ 38 ; 5 ; NNN m and
                 ESC [ 48 ; 5 ; NNN m).
 
@@ -1173,7 +1173,7 @@ if,"char==65",then,"it's an A",else,"it's not an a",endif	^[ q
  sequences or which are frequently wrong.  Note that if the termcap entry is
  correct, it will override these later on.
 
-paste			^[ ] 5 2 ; ;		Bracketed paste
+paste			^[ ] 5 2 ;		Bracketed paste
 
 insc			^[ [ 2 ~
 insc			^[ [ L			SCO
