@@ -95,7 +95,7 @@
 		looks like an ANSI terminal (support bold and capability starts with
 		ESC [).
 
- -assume_256color
+-assume_256color
 		Assume terminal has xterm 256 color support (ESC [ 38 ; 5 ; NNN m and
                 ESC [ 48 ; 5 ; NNN m).
 
@@ -1116,7 +1116,7 @@ xtmouse		^[ [ M		Introduces an xterm mouse event
  Compile macro
 :def compile querysave,query,scratch,"* Build Log *",rtn,markb,eof," ",markk,blkdel,build
 
-paste			^[ ] 5 2 ; ;		Bracketed paste
+paste			^[ ] 5 2 ;		Bracketed paste
 
 insc			^[ [ 2 ~
 insc			^[ [ L			SCO
